2006-03-02  Derek Scherger  <derek@echologic.com>

	testsuite.at: fix broken include of t_restriction_excludes_parent.at

2006-03-02  Derek Scherger  <derek@echologic.com>

	* app_state.{cc,hh} (restriction_requires_parent): remove
	* restrictions.cc (restrict_cset): remove call to
	restriction_requires_parent
	* restrictions.hh: remove unused struct
	* tests/t_persistent_server_keys.at: use unrestricted commit to
	avoid parent exclusion
	* tests/t_restriction_with_exclude.at: remove bogus check
	* tests/t_restrictions.at: work around excluded parents
	* tests/t_revert_new_project.at: un-XFAIL
	* tests/t_subdirs.at: work around excluded parents
	* tests/t_restriction_excludes_parent.at: new XFAIL test for restrictions
	that exclude required parent dirs
	* testsuite.at: call it

2006-03-02  Emile Snyder  <emile@alumni.reed.edu>

	add --unknown, when new files exist in new directories, would try
	to add files multiple times.
	
	* commands.cc (CMD(add)): Call perform_additions() with correct
	new boolean flag val to determine whether it recurses on the paths
	we hand it.
	* work.{cc,hh} (perform_additions): Use boolean flag to indicate
	whether the paths should be treated as a set of starting points
	for recursively adding entries, or a fixed set of paths.
	* tests/t_add.at: Test that we are not getting the warning
	messages when adding new files in new directories.

2006-03-01  Benoît Dejean  <benoit@placenet.org>

	* po/fr.po: Updated French translation.

2006-03-01  Richard Levitte  <richard@levitte.org>

	* po/sv.po: One small translation change.

2006-03-01  Matthew Gregan  <kinetik@orcon.net.nz>

	* transforms.cc: Better use of appropriately typedefed types.
	* transforms.cc: Don't assume wchar_t is wide enough to hold a
	UCS-4 character.
	* transforms.cc, transforms.hh: Add utf8_validate function and
	some validity unit tests.
	(system_to_utf8): Check that conversion has resulted in valid
	UTF-8.